tests/spec/format/snapshots/line_breaking_long_binary_chain.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { first_value + second_value + third_value + fourth_value + fifth_value + sixth_value }"
---
fn test() {
  first_value + second_value + third_value + fourth_value + fifth_value +
  sixth_value
}
