tests/spec/format/snapshots/line_breaking_long_call_args.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { some_function(first_argument, second_argument, third_argument, fourth_argument, fifth_argument) }"
---
fn test() {
  some_function(
    first_argument,
    second_argument,
    third_argument,
    fourth_argument,
    fifth_argument,
  )
}
