tests/spec/format/snapshots/line_breaking_long_else_if_condition.snap
---
source: tests/spec/format/mod.rs
description: "fn test(n: int, m: int) -> string { if n == 1 { \"one\" } else if n > 10 && n < 100 && m != 42 && n % 2 == 0 && m != 7 && n > 0 && m > 3 { \"two\" } else { \"three\" } }"
---
fn test(n: int, m: int) -> string {
  if n == 1 {
    "one"
  } else if n > 10 && n < 100 && m != 42 && n % 2 == 0 && m != 7 && n > 0 && m > 3 {
    "two"
  } else {
    "three"
  }
}
