tests/spec/format/snapshots/line_breaking_long_function_signature.snap
---
source: tests/spec/format/mod.rs
description: "fn process(first_argument: string, second_argument: int, third_argument: bool, fourth_argument: float) -> string { first_argument }"
---
fn process(
  first_argument: string,
  second_argument: int,
  third_argument: bool,
  fourth_argument: float,
) -> string {
  first_argument
}
