tests/spec/format/snapshots/line_breaking_long_if_condition.snap
---
source: tests/spec/format/mod.rs
description: "fn check(n: int, label: string) -> string { if n > 10 && n < 100 && label != \"\" && n % 2 == 0 && n != 42 && n != 7 && n > 0 { return \"yes\" } \"no\" }"
---
fn check(n: int, label: string) -> string {
  if n > 10 && n < 100 && label != "" && n % 2 == 0 && n != 42 && n != 7 && n > 0 {
    return "yes"
  }
  "no"
}
