tests/spec/format/snapshots/line_breaking_long_if_let_scrutinee.snap
---
source: tests/spec/format/mod.rs
description: "fn test() -> int { if let Some(v) = first_value + second_value + third_value + fourth_value + fifth_value { v } else { 0 } }"
---
fn test() -> int {
  if let Some(v) = first_value + second_value + third_value + fourth_value + fifth_value {
    v
  } else {
    0
  }
}
