tests/spec/format/snapshots/line_breaking_long_match_subject.snap
---
source: tests/spec/format/mod.rs
description: "fn test(n: int) -> string { match n > 10 && n < 100 && n % 2 == 0 && n != 42 && n != 7 && n > 0 && n < 9999 { true => \"t\", false => \"f\" } }"
---
fn test(n: int) -> string {
  match n > 10 && n < 100 && n % 2 == 0 && n != 42 && n != 7 && n > 0 && n < 9999 {
    true => "t",
    false => "f",
  }
}
