tests/spec/format/snapshots/line_breaking_long_slice.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { [first_element, second_element, third_element, fourth_element, fifth_element, sixth_element] }"
---
fn test() {
  [
    first_element,
    second_element,
    third_element,
    fourth_element,
    fifth_element,
    sixth_element,
  ]
}
